fixed center alignement on footer

--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,7 @@ main .laptop-image {
 
 footer {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
   padding: 16px 16px 24px 16px;
   width: 100%;
